--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -14,3 +14,14 @@ author_profile: true
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
+
+---
+layout: archive
+title: "Presented posters "
+permalink: /posters/
+author_profile: true
+---
+
+{% for post in site.posters reversed %}
+  {% include archive-single-talk.html %}
+{% endfor %}
